--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -6,9 +6,10 @@ build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::More: 0.42
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 0
 distribution_type: module
-generated_by: 'Module::Install version 1.01'
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.57_05'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,12 +17,9 @@ meta-spec:
 name: Devel-PackagePath
 no_index:
   directory:
-    - ex
-    - inc
     - t
+    - inc
 requires:
   Moose: 0.64
   MooseX::Types::Path::Class: 0.04
-resources:
-  license: http://dev.perl.org/licenses/
 version: 0.03
